Fixed z-index

--- a/src/Afup/BarometreBundle/Resources/assets/sass/_global.scss
+++ b/src/Afup/BarometreBundle/Resources/assets/sass/_global.scss
@@ -80,3 +80,6 @@ body {
 .select2-drop {
     z-index: $zindex-navbar - 50;
 }
+.select2-drop-mask {
+    z-index: $zindex-navbar - 60;
+}
